www/static/global/css/main.css
/* ... */
/* @group Buttons
------------------------------------------- */

.button_group{
	margin: 0 10px 10px 0;
}
.button_group .btn-lg{
	padding: 12px 11px;
}
.button_group .button_big{
	padding-left: 55px;
}
.button_dim{
	min-width: 52px;
	color: #CCC;
}
.button_blinds{
	min-width: 50px;
	color: #CCC;
}
.button_blinds U{
	opacity: 0;
}
.button_blinds I{
	opacity: 1.0;
}

.button_big .but_img{
	display: inline-block;
	padding: 2px;
	border: 1px solid #FFF;
	background: rgba(255,255,255,0.2);
	vertical-align: bottom;
	border-color: rgba(0,0,0,0.3) rgba(255,255,255,0.2) rgba(255,255,255,0.2) rgba(0,0,0,0.3);
	border-radius: 4px;
	position: absolute;
	margin-top: -7px;
	margin-left: -45px;
}
.button_big .but_img IMG{
	height: 30px;	
}
/* @end */

/* @group Page Home
------------------------------------------- */
#body_home .row{
}
#body_home .container{
	/*padding-left: 1px;
	padding-right: 1px;*/
}
#body_home .container-fluid{
	padding-left: 6px;
	padding-right: 6px;
}
@media (min-width: 992px){
	#body_home .col-md-3{
		padding-left: 0px;
	}
}
#body_home .pmd_panel .panel-heading{
	padding: 5px 10px;
	font-size: 13px;
}
#body_home .pmd_panel .panel-heading I{
	opacity: 0.4;
	margin-right: 4px;
}

#body_home .pmd_panel .panel-body{
	padding: 10px 0 0 10px;
}
#body_home .pmd_panel .sensor{
	color: #AAA;
}
#body_home .pmd_panel .sensor B{
	color: #666;
	margin-right: 2px;
	margin-left: 4px;
}
#body_home .pmd_panel .sensor IMG{
	height: 16px;
	margin-left: 15px;
	margin-right: 2px;
	opacity: 0.6;
	vertical-align: text-bottom;
}
#body_home .pmd_panel .sensor_warn B{
	color: red !important;
}

#body_home .button_color{
	min-width: 56px;
	color: rgba(250,250,250, 0.8);
	text-shadow: 1px 1px 1px rgba(0,0,0,0.6);
}
 /* jQWheelColorPicker --- */
#body_home .popover{
	background: rgba(255,255,255,1);
	border: 1px solid rgba(0,0,0,0.25);
}
#body_home .popover-title{
}
#body_home .dimmer_popover_content{
	width: 443px; /* else arrow is not centered */	
}
#body_home .rgb_popover_content{
	width: 425px; /* else arrow is not centered */
}
#body_home .rgb_presets{
	margin-bottom: 10px;
	text-align: center;
}
#body_home .rgb_presets_bar{
	display: inline-block;
	/*overflow: hidden;*/
}
#body_home .rgb_preset{
	display: inline-block;
	float: left;
	margin: 0 4px;
	margin-bottom: 5px;
	min-width: 50px;
	height: 50px;
	line-height: 50px;
	text-align: center;
	border: 1px solid rgba(0,0,0,0.25);
	border-radius: 5px;
	/*
	color: rgba(250,250,250, 0.8);
	text-shadow: 1px 1px 1px rgba(0,0,0,0.6);
	*/
	color: transparent;
	font-size: 11px;
	cursor: pointer ;
}
#body_home .rgb_preset:active{
	opacity: 0.4;
}
#body_home .rgb_sliders{
	overflow: hidden;
	height: 183px;
}
#body_home .rgb_preview{
	margin-top: 15px;
	border: 1px solid rgba(0,0,0,0.25);
	width: 100%;
	height: 50px;
}
#body_home .rgb_preview DIV{
	height: 100%;
}


/*wWidget*/
#body_home  .jQWCP-block{	
	width: 100% !important;
	z-index: 2000 !important;
	box-shadow: none;
	border: none;
	background: none;
	padding: 3px;
	display: block !important;
	/*background: rgba(255,255,255, 0.5);*/
}
#body_home .jQWCP-block .jQWCP-slider-wrapper{
	width: 40px;
}
#body_home .jQWCP-block .jQWCP-wRed,
#body_home .jQWCP-block .jQWCP-wGreen,
#body_home .jQWCP-block .jQWCP-wBlue{
	width: 20px;
}
#body_home .jQWCP-block .jQWCP-wPreview {
/*
	height: 50px;
	width: 100%;
	background: white;
	margin-top: 15px;
*/
}
#body_home .jQWCP-block:focus {
	outline:none;
}




/* @group Right Blocks
------------------------------------------- */

.block_right TABLE{
	width: 100%;
}
.block_right TABLE TD{
	border-bottom: 1px solid #eee;
	padding: 4px 0;
}
.block_right TABLE TR:last-child TD{
	border-bottom: none;
}
.block_right TABLE .td_icon{
	padding-left: 6px;
}
.block_right TABLE .td_icon IMG{
	height: 20px;
}
.block_right TABLE .td_name{
	padding-left: 6px;
	padding-right: 10px;
	font-size: 12px;
	width: 80%;	
}
.block_right TABLE .td_value{
	text-align: right;
	padding-right: 4px;
	font-size: 14px;
	/*white-space: nowrap;*/
	font-weight: bold;
	color: #333;
}
.block_right TABLE .td_value A{
	color: #444;
}
.block_right TABLE .td_value A:hover{
	color: #000;
}

.block_right TABLE .td_unit{
	padding-right: 6px;
	color: #555;
	font-size: 10px;
	white-space: nowrap;
}

.block_right .sensor_warn TD{
	color: red !important;
}

#block_calendar .td_value{
	padding-right: 10px;
	font-weight: normal;
	color: #333;
}
#block_calendar .td_value{
	white-space: nowrap;
}
#block_calendar TR:last-child .td_value{
	white-space: normal;	
}

#block_links TABLE{
	margin: 4px 0;
}
#block_links TD{
	padding-left: 10px;
	padding-right: 10px;
	border: 0;
}
#block_links TD A{
	width: 100%;
	text-align: left;
}
#block_links TD I{
	margin-right: 3px;
}

/* @end */
/* @end */

/* @group Page Debug
------------------------------------------- */
#body_debug .h1{
	color: #444;
	margin-bottom: 10px;
	font-size: 20px;
	text-align: right;
}
#body_debug {
	background-color: #aaa;
}
#body_debug .div_debug{
	border: 1px solid #555;
	box-shadow: 4px 4px 8px rgba(0,0,0,0.5);
	-moz-box-shadow: 4px 4px 8px rgba(0,0,0,0.5);
	-webkit-box-shadow: 4px 4px 8px rgba(0,0,0,0.5);
}
#body_debug H5{
	background-color: #666;
	margin: 0;
	color: yellow;
	font-weight: normal;
	padding: 10px;
}
#body_debug .backtrace{
	float: right;
	display: inline-block;
	font-size: 11px;
	line-height: 150%;
	background: #333;
	color: #bbb;
	padding: 10px;
	font-family: Monaco, Courier, mono;
	margin: 0 0 10px 10px;
}
#body_debug PRE{
	border-radius: 0;
	-moz-border-radius: 0;
	-webkit-border-radius: 0;
	font-size: 9px;	
	border: none;
	margin: 0;
}
/* @end */


/* @group Page Error
------------------------------------------- */
#body_error .h1{
	color: #F00;
	margin-bottom: 20px;
	font-size: 46px;
}
#body_error .well{
	text-align: center;
	padding: 30px 20px;
	border: 3px solid #F00;
	background: #fefcaf;
	box-shadow: 4px 4px 8px rgba(0,0,0,0.5);
	-moz-box-shadow: 4px 4px 8px rgba(0,0,0,0.5);
	-webkit-box-shadow: 4px 4px 8px rgba(0,0,0,0.5);
}
/* ... */

